--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -31,6 +31,23 @@
     font-size: 12px !important;
     margin: 4px 2px;
 }
+.buttn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 3px;margin: 3px 0px;
+    
+}.statusbutton2{background-color: #00c3ff !important;}.statusbutton3{background-color: #77b0fb !important;}.statusbutton4{background-color: #f8c25e !important;}
+.statusbutton{
+    height: auto;color: white;
+    width: 6rem;font-weight: 500;
+    text-align: center;border: none !important;
+    font-size: 11px;
+    padding: 2px !important;
+    
+}
+
 .btn-1{
   height: 1.8rem;
   padding: auto;
