--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -59,6 +59,9 @@
   box-shadow: none;
   border: none;
 }
+.star-student.table-striped tbody tr:nth-of-type(even) {
+    background-color: #f9f9f9;
+}
 .btn-2{
     height: 1.8rem;
     padding: auto;
