--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -153,7 +153,8 @@
   word-break: break-word;
 }
 
-table {
+ 
+/* table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
@@ -168,7 +169,7 @@ th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
-}
+} */
 
 .intestdata {
   display: flex;
