--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -4,6 +4,12 @@
   gap: 2px;
   padding: 11px 0px;
 }
+
+.pangnation{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 .card10 {
   display: grid;
   grid-template-columns: 24% 14% 17% 14% 16% auto;
@@ -63,10 +69,16 @@
   font-size: 14px;
   box-shadow: none;
   border: none;
+}.datarender{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
 }
 .star-student.table-striped tbody tr:nth-of-type(even) {
   background-color: #f9f9f9;
 }
+
 .btn-2 {
   height: 1.8rem;
   padding: auto;
@@ -78,7 +90,19 @@
   box-shadow: none;
   border: none;
 }
-
+.centerdiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form-control-lg1 {
+  width: 15rem;
+  padding: 0.3rem 1rem;
+  font-size: 1rem !important;
+  border-radius: 1px soild gray !important;
+  border: 1px solid gray !important;
+}
 @media screen and (max-width: 780px) {
   /* . */
   .card11 {
@@ -147,6 +171,7 @@
   background-color: rgb(254 192 181 / 32%);
   border-radius: 3px;
 }
+
 .wordbrak {
   width: 100px !important;
   overflow: hidden;
