--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -5,7 +5,7 @@
   padding: 11px 0px;
 }
 
-.pangnation{
+.pangnation {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -69,7 +69,8 @@
   font-size: 14px;
   box-shadow: none;
   border: none;
-}.datarender{
+}
+.datarender {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -90,7 +91,7 @@
   box-shadow: none;
   border: none;
 }
-.centerdiv{
+.centerdiv {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -178,7 +179,7 @@
   word-break: break-word;
 }
 
- /* .modelaa{
+/* .modelaa{
   width: 80vw !important;
  } */
 .intestdata {
