--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -34,8 +34,8 @@
 .buttn {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+  align-items: flex-start;
+  justify-content: center;
   gap: 3px;
   margin: 3px 0px;
 }
@@ -44,6 +44,12 @@
 }
 .statusbutton3 {
   background-color: #77b0fb !important;
+}
+.tablerowevent {
+  background-color: rgb(248, 247, 247);
+}
+.tablerowodd {
+  background-color: white;
 }
 .statusbutton4 {
   background-color: #f8c25e !important;
@@ -59,6 +65,13 @@
   padding: 2px !important;
 }
 
+
+.badgedat{
+  display: flex;
+  flex-direction: row !important;
+  justify-content: flex-start;
+  gap: 10px;
+}
 .btn-1 {
   height: 1.8rem;
   padding: auto;
