--- a/src/components/pages/Oxyloans/Utills/file.css
+++ b/src/components/pages/Oxyloans/Utills/file.css
@@ -1,15 +1,16 @@
-/* table {
+.table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-  td, th {
+  .table > tr >td, .table > th {
     border: 1px solid #dddddd;
+    
     text-align: left;
     padding: 8px;
   }
   
-  tr:nth-child(even) {
+  .tr:nth-child(even) {
     background-color: #dddddd;
-  } */
+  }
