--- a/src/components/pages/Oxyloans/Lender/table.css
+++ b/src/components/pages/Oxyloans/Lender/table.css
@@ -3,7 +3,10 @@
   text-align: left;
   padding: 8px;
 }
-
+.textwrap{
+  width: 18rem !important;
+  overflow: hidden !important;
+}
 .tablerow > td {
   border: 1px solid #eeeeee;
   text-align: left;
