--- a/src/components/pages/Oxyloans/Utills/file.css
+++ b/src/components/pages/Oxyloans/Utills/file.css
@@ -1,16 +1,17 @@
 .table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  .table > tr >td, .table > th {
-    border: 1px solid #dddddd;
-    
-    text-align: left;
-    padding: 8px;
-  }
-  
-  .tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table > tr > td,
+.table > th {
+  border: 1px solid #dddddd;
+
+  text-align: left;
+  padding: 8px;
+}
+
+.tr:nth-child(even) {
+  background-color: #dddddd;
+}
