--- a/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
+++ b/src/components/pages/Oxyloans/Lender/InvoiceGrid.css
@@ -193,6 +193,8 @@
   border-radius: 3px;
 }
 
+
+
 .wordbrak {
   width: 100px !important;
   overflow: hidden;
@@ -218,6 +220,7 @@
   justify-content: center;
   gap: 2rem;
 }
+
 .displaycenter > div {
   display: flex;
   flex-direction: row;
@@ -225,4 +228,31 @@
   justify-content: center;
   margin-top: 2rem;
   gap: 1rem;
+}
+
+@media screen and (min-width: 290px) and (max-width: 500px) {
+  .displaycenter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    gap: 0px !important;
+  }
+  
+  .displaycenter > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0rem;
+    gap: 1rem !important;
+  }
+
+  .notepoint {
+    margin: 0px !important;
+  }
+
+  .textquery{
+    text-align: start  !important;
+  }
 }
