--- a/src/components/pages/Authentication/user.css
+++ b/src/components/pages/Authentication/user.css
@@ -11,8 +11,11 @@ then set the desired styles for .card_user-img. */
     width: 230px;
     height: 300px;
     background: var(--bg-color);
-    border: 2px solid #2909cc;
-    box-shadow: 4px 4px #1412e6;
+    /* border: 2px solid #2909cc;
+    box-shadow: 4px 4px #1412e6; */
+
+    border: 2px solid #5c40ea;
+    box-shadow: 4px 4px #6d6cf1;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -89,8 +92,10 @@ then set the desired styles for .card_user-img. */
   }
   
   .card_user-title {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
+    width: 100%;
+    text-wrap: wrap;
     text-align: center;
     color: var(--font-color);
   }
