change on validaton

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10195,3 +10195,14 @@ span.flagg {
     width: 2rem !important;
   }
 }
+
+@media (min-width: 1400px) {
+  .container-xxl,
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 1200px;
+  }
+}
